--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="invitation.css">
+  <title>상견례 초대장</title>
+</head>
+<body>
+  <img src="/상견례초대장.png" alt="초대장">
+</body>
+</html>
