--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <title>상견례 초대장</title>
 </head>
 <body>
-  <img src="/invitation.png" alt="초대장">
+  <img src="invitation.png" alt="초대장">
 </body>
 </html>
